--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Desenvolvedor front-end & UX/UI Designer. Localizado no Rio de Janeiro.">
   <title>Lobo - Desenvolvedor e Designer</title>
-  <link rel="stylesheet" href="./design/style.min.css">
+  <link rel="stylesheet" href="./css/style.min.css">
   <link rel="shortcut icon" href="./img/detalhe.svg" type="image/x-icon">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -38,13 +38,17 @@
     <h2 class="subtitle" id="experience-title">Experiência</h2>
     <div>
       <div>
-        <p class="experience-text">Desenvolvo pequenos projetos como o Bikcraft utilizando apenas <strong>HTML</strong>, <strong>CSS</strong> e <strong>JavaScript</strong>. Para aplicativos web como a rede social Dogs eu trabalhei no <strong>UX</strong> e <strong>UI design</strong> do projeto.</p>
+        <p class="experience-text">Desenvolvo pequenos projetos como o Bikcraft utilizando apenas <strong>HTML</strong>,
+          <strong>CSS</strong> e <strong>JavaScript</strong>. Para aplicativos web como a rede social Dogs eu trabalhei
+          no <strong>UX</strong> e <strong>UI Design</strong> do projeto.
+        </p>
       </div>
       <div class="company">
         <span class="company-year">2045</span>
         <h3 class="company-title">Bikcraft</h3>
         <span class="company-title">Desenvolvedor Júnior</span>
-        <p class="company-text">No projeto Bikcraft eu trabalhei no desenvolvimento completo do HTML, CSS e JavaScript do site. Além disso, prestei consultoria no design.</p>
+        <p class="company-text">No projeto Bikcraft eu trabalhei no desenvolvimento completo do HTML, CSS e JavaScript
+          do site. Além disso, prestei consultoria no design.</p>
         <ul class="company-skills">
           <li>HTML</li>
           <li>CSS</li>
@@ -57,7 +61,8 @@
         <span class="company-year">2044-45</span>
         <h3 class="company-title">Surfbot</h3>
         <span class="company-title">Estagiário</span>
-        <p class="company-text">Surfbot é uma empresa que oferece aulas de surf no Rio de Janeiro. O projeto foi feito em HTML, CSS e JavaScript. Todo o projeto foi feito do zero.</p>
+        <p class="company-text">Surfbot é uma empresa que oferece aulas de surf no Rio de Janeiro. O projeto foi feito
+          em HTML, CSS e JavaScript. Todo o projeto foi feito do zero.</p>
         <ul class="company-skills">
           <li>HTML</li>
           <li>CSS</li>
@@ -68,7 +73,8 @@
         <span class="company-year">2044</span>
         <h3 class="company-title">Brafé</h3>
         <span class="company-title">Desenvolvedor Júnior</span>
-        <p class="company-text">Mais de 3 projetos foram desenvolvidos para a empresa Brafé. Eu trabalhei na criação do e-mail marketing e também no HTML.</p>
+        <p class="company-text">Mais de 3 projetos foram desenvolvidos para a empresa Brafé. Eu trabalhei na criação do
+          e-mail marketing e também no HTML.</p>
         <ul class="company-skills">
           <li>E-mail Marketing</li>
           <li>HTML</li>
@@ -83,7 +89,9 @@
     <div class="formation-container">
       <h2 class="subtitle" id="formation-title">Formação</h2>
       <div>
-        <p class="formation-text">Minha mais recente experiência acadêmica foi o <strong>mestrado</strong> que fiz no exterior em <strong>UX Design</strong>. Além disso, me mantenho atualizado sempre com cursos intensivos online.</p>
+        <p class="formation-text">Minha mais recente experiência acadêmica foi o <strong>mestrado</strong> que fiz no
+          exterior em <strong>UX Design</strong>. Além disso, me mantenho atualizado sempre com cursos intensivos
+          online.</p>
         <ul class="college-list">
           <li class="college-item">
             <span class="college-type">Bacharel</span>
@@ -123,7 +131,8 @@
 
   <footer class="footer" id="contact">
     <div class="footer-container">
-      <p class="footer-text">Estou disponível para novos projetos no momento. Entre em contato comigo e marcamos uma conversa.</p>
+      <p class="footer-text">Estou disponível para novos projetos no momento. Entre em contato comigo e marcamos uma
+        conversa.</p>
       <ul class="footer-list">
         <li>lobo@gmail.com</li>
         <li>+55 (61) 99999-9999</li>
